RESOLVED FIXED183946
HTMLElement factory doesn't need to call MediaPlayer::isAvailable
https://bugs.webkit.org/show_bug.cgi?id=183946
Summary HTMLElement factory doesn't need to call MediaPlayer::isAvailable
Eric Carlson
Reported 2018-03-23 12:15:25 PDT
The HTMLVideoElement, HTMLAudioElement, and HTMLTrackElement constructors check both document.settings().mediaEnabled() and MediaPlayer::isAvailable to see if media is disabled. Ports should disable the setting if they don't want media elements, so the later is redundant.
Attachments
Patch (5.57 KB, patch)
2018-03-23 12:21 PDT, Eric Carlson
no flags
Radar WebKit Bug Importer
Comment 1 2018-03-23 12:15:53 PDT
Eric Carlson
Comment 2 2018-03-23 12:21:03 PDT
WebKit Commit Bot
Comment 3 2018-03-23 13:11:57 PDT
Comment on attachment 336403 [details] Patch Clearing flags on attachment: 336403 Committed r229915: <https://trac.webkit.org/changeset/229915>
WebKit Commit Bot
Comment 4 2018-03-23 13:11:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.