HTMLElement factory doesn't need to call MediaPlayer::isAvailable https://bugs.webkit.org/show_bug.cgi?id=183946 <rdar://problem/38802687>

Reviewed by Youenn Fablet.

Source/WebCore:

Test: media/media-disabled.html

* dom/make_names.pl:
(printConstructorInterior):
* page/Settings.yaml:
* page/SettingsDefaultValues.h:

LayoutTests:

* media/media-disabled-expected.txt: Added.
* media/media-disabled.html: Added.


Canonical link: https://commits.webkit.org/199547@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229915 268f45cc-cd09-0410-ab3c-d52691b4dbfc